--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
     "version": 1,
     "locale": "en_US.UTF-8",
     "metadata": {
-      "appmode": "streamlit-app",
-      "entrypoint": "sliders"
+      "appmode": "python-streamlit",
+      "entrypoint": "app"
     },
     "python": {
       "version": "3.9.5",
@@ -16,6 +16,12 @@
     "files": {
       "requirements.txt": {
         "checksum": "3eb731e80d32f3d5f8fe99fb9e8d7c22"
+      },
+      "main.py": {
+        "checksum": "3eb731e80d32f3d5f8fe99fb9e8d7c22"
+      },
+      "manifest.json": {
+        "checksum": "603a83d0d951a58c1b243f9a72298dec"
       }
     }
   }
